# G4-MK

./: .gitignore  CMakeLists.txt  README.md  analyze_dsmk.C  analyze_mk.C  microtrack.cc  processMicrotrack.C  run_ac225.mac  run_alpha_range.mac  run_am241_scan.sh  run_carbon_scan.sh  run_hsg.mac  run_validation.mac  task6_compartments.C  task6_summary.C  task6_svalue_balance.C
analysis/: MKplot.py  analyze_dsmk.C  analyze_mk.C  draw_params_table.py  dsmk.py  fit_lq_xray.py  hlet_fit.py  mk.py  msmk.py  plot_distributions.py  plot_smk_ac225_overlay.py  processMicrotrack.C  smk.py  task6_compartments.C  task6_summary.C  task6_svalue_balance.C
analysis/MKmodel/: __init__.py  dsmk.py  mk.py  msmk.py  smk.py
include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  PhysicsList.hh  PhysicsListMessenger.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RunAction.hh  SteppingAction.hh  TrackerHit.hh  TrackerSD.hh  TrackingAction.hh
macro/: run_ac225.mac  run_ac225_decay.mac  run_ac225_single_decay.mac  run_am241_decay.mac  run_carbon.mac  run_lu177_decay.mac  run_pc3.mac  run_validation.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  PhysicsList.cc  PhysicsListMessenger.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  SteppingAction.cc  TrackerHit.cc  TrackerSD.cc  TrackingAction.cc
